[package]
name = "sr_formats"
version = "0.1.0"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
edition = "2018"

[dependencies]
nom = { version = "5.1", default-features = false, features = ["std"] }
bitflags = "1.2"
encoding_rs = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
struple = "0.1"
mint = "0.5"
